--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 /* GENERAL */
+
 * {
     margin: 0;
     padding: 0;
@@ -20,12 +21,14 @@ p {
 
 
 /* TRANSITION */
+
 a, .btn {
     transition: all 300ms ease;
 }
 
 
 /* DESKTOP NAV */
+
 nav, .nav-links {
     display: flex;
 }
@@ -66,6 +69,7 @@ a:hover {
 
 
 /* HAMBURGER MENU */
+
 #hamburger-nav {
     display:none;
 }
@@ -139,6 +143,7 @@ a:hover {
 
 
 /* SECTIONS */
+
 section {
     padding-top: 4vh;
     height: 96vh;
@@ -154,6 +159,7 @@ section {
 
 
 /* PROFILE SECTION */
+
 #profile {
     display: flex;
     justify-content: center;
@@ -201,6 +207,7 @@ section {
 
 
 /* ICONS */
+
 .icon {
     cursor: pointer;
     height: 2rem;
@@ -209,6 +216,7 @@ section {
 
 
 /* BUTTONS */
+
 .btn-container {
     display: flex;
     justify-content: center;
@@ -258,6 +266,7 @@ section {
 
 
 /* ABOUT SECTION */
+
 #about {
     position: relative;
 }
@@ -312,18 +321,123 @@ section {
 
 /* EXPERIENCE SECTION */
 
+#experience {
+    position:relative
+}
 
+.experience-sub-title {
+    color: rgb(85,85,85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
 
+.experience-details-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+
+article {
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+
+article .icon {
+    cursor: default;
+}
 
 
 /* PROJECTS SECTION */
 
+#projects {
+    position: relative;
+}
 
+.color-container {
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+}
+
+.project-img {
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+}
+
+.project-title {
+    margin: 1rem;
+    color: black;
+}
+
+.project-btn {
+    color: black;
+    border-color: rgb(163, 163, 163);
+}
 
 
 /* CONTACT */
+
+#contact {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container {
+    display: flex;
+    justify-self: center;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+}
+
+.contact-info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container p {
+    font-size: larger;
+}
+
+.contact-icon {
+    cursor: default;
+    height: 2rem;
+}
+
+.email-icon {
+    height: 2.5rem;
+}
 
 
 
 
 /* FOOTER SECTION */
+
+footer {
+    height: 26vh;
+    margin: 0 1rem;
+}
+
+footer p {
+    text-align: center;
+}
